# pick-and-place

./: LICENSE  README.md
pick_and_place/: CMakeLists.txt  package.xml  requirements.txt
pick_and_place/launch/: panda_world.launch
pick_and_place/models/bin_blue/: model.config  model.sdf
pick_and_place/models/bin_green/: model.config  model.sdf
pick_and_place/models/bin_red/: model.config  model.sdf
pick_and_place/models/block_blue/: model.config  model.sdf
pick_and_place/models/block_green/: model.config  model.sdf
pick_and_place/models/block_red/: model.config  model.sdf
pick_and_place/models/kinect/: model.sdf
pick_and_place/models/underbin_bench/: model.config  model.sdf
pick_and_place/models/workbench/: model.config  model.sdf
pick_and_place/msg/: DetectedObject.msg  DetectedObjectsStamped.msg
pick_and_place/scripts/: controller.py  object_detector.py  pick_and_place_state_machine.py
pick_and_place/worlds/: pick_and_place.world
